--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -2,55 +2,27 @@ server:
   port: 8080
 
 spring:
-  eureka:
-    client:
-      register-with-eureka: true
-      fetch-registry: true
-      serviceUrl:
-        defaultZone: http://localhost:8761/eureka
   cloud:
     gateway:
-      # discovery:
-      #   locator:
-      #     enabled: true
-      #     lower-case-service-id: true
       routes:
-        - id: aplicativo_movie-service
+        - id: movieRoute
           uri: lb://movie-service
           predicates:
-            - Path=/api/movies/**
+            - Path=/movies/**
           filters:
-            - StripPrefix=2
             - name: CircuitBreaker
               args:
                 name: moviesService
                 fallbackUri: forward:/fallback/movies
-        - id: aplicativo_catalog-service
+        - id: catalogRoute
           uri: lb://catalog-service
           predicates:
-            - Path=/api/catalog/**
+            - Path=/catalogs/**
           filters:
-            - StripPrefix=2
             - name: CircuitBreaker
               args:
                 name: catalogService
-                fallbackUri: forward:/fallback/catalog
-
-queue:
-  movie:
-    name: MovieQueue
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: info
-  info:
-    env:
-      enabled: true
-  endpoint:
-    info:
-      enabled: true
+                fallbackUri: forward:/fallback/catalogs
 
 info:
   app:
