--- a/catalog-service-dev.yml
+++ b/catalog-service-dev.yml
@@ -1,57 +1,36 @@
 server:
   port: 8084
 
-eureka:
-  instance:
-    hostname: localhost
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
 spring:
-  application:
-    name: catalog-service
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-    driverClassName: org.h2.Driver
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;
     username: sa
     password: sa
+  sql:
+    init:
+      data-locations: classpath:catalog.sql
   jpa:
-    open-in-view: false
-    show-sql: true
+    defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  rabbitmq:
-    username: guest
-    password: guest
-    host: localhost
-    port: 5672
+      ddl-auto: create-drop
 
-queue:
-  movie:
-    name: MovieQueue
-
-message: hello catalog
+resilience4j:
+  circuitbreaker:
+    instances:
+      movies:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 5
+        failureRateThreshold: 50
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 15000
+        permittedNumberOfCallsInHalfOpenState: 3
+        registerHealthIndicator: true
+        allowHealthIndicatorToFail: false
 
 management:
-  endpoints:
-    web:
-      exposure:
-        include: info
-  info:
-    env:
-      enabled: true
-  endpoint:
-    info:
+  health:
+    circuitbreakers:
       enabled: true
 
 info:
@@ -59,6 +38,3 @@ info:
     name: ${spring.application.name}
     version: 1.0.0
     description: Catalog Microservice
-  svc:
-    intanceid: ${eureka.instance.instance-id}
-    port: ${server.port}
