--- a/movie-service-dev.yml
+++ b/movie-service-dev.yml
@@ -1,58 +1,19 @@
 server:
   port: 8082
 
-eureka:
-  instance:
-    hostname: localhost
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
 spring:
-  application:
-    name: movie-service
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-    driverClassName: org.h2.Driver
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;
     username: sa
     password: sa
+  sql:
+    init:
+      data-locations: classpath:movie.sql
   jpa:
-    open-in-view: false
-    show-sql: true
+    defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  rabbitmq:
-    username: guest
-    password: guest
-    host: localhost
-    port: 5672
-
-queue:
-  movie:
-    name: MovieQueue
-
-message: hello world
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: info
-  info:
-    env:
-      enabled: true
-  endpoint:
-    info:
-      enabled: true
+      ddl-auto: create-drop
 
 info:
   app:
